docs/styles/style.css
/* ... */
.attribute-features p:last-child {
  padding-bottom: 0;
}

.attribute-features p > svg {
  margin-right: 1rem;
  width: 2rem;
  height: 2rem;
}

.attribute-features p svg path {
  fill: var(--color-foreground);
}

@media only screen and (min-width: 64rem) {
  .attribute:nth-child(1n) .attribute-title {
    border-top-right-radius: 1rem !important;
    border-bottom-right-radius: 1rem !important;
    border-top-left-radius: 0rem !important;
    border-bottom-left-radius: 0rem !important;
  }
  .attribute:nth-child(1n) .attribute-features {
    border-top-left-radius: 1rem !important;
    border-bottom-left-radius: 1rem !important;
    border-top-right-radius: 0rem !important;
    border-bottom-right-radius: 0rem !important;
  }
  .attribute:nth-child(2n) .attribute-title {
    border-top-left-radius: 1rem !important;
    border-bottom-left-radius: 1rem !important;
    border-top-right-radius: 0rem !important;
    border-bottom-right-radius: 0rem !important;
  }
  .attribute:nth-child(2n) .attribute-features {
    border-top-right-radius: 1rem !important;
    border-bottom-right-radius: 1rem !important;
    border-top-left-radius: 0rem !important;
    border-bottom-left-radius: 0rem !important;
  }
}

/* PROTOCOLS SECTION */

#protocols {
  margin-top: 12rem;
  position: relative;
  background: var(--color-foreground-level-1);
}

#protocols h1 {
  padding-top: 4rem;
  font-size: 20vw;
  background: linear-gradient(
    269.94deg,
    #000aff 4.97%,
    #00b187 23.26%,
    #00c40a 31.97%,
    #ff7a00 48.46%
  );
  color: #000;
  mix-blend-mode: exclusion;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  position: relative;
  z-index: 1;
  white-space: nowrap;
  pointer-events: none;
}

@media only screen and (min-width: 105rem) {
  #protocols h1 {
    font-size: 23rem;
  }
}

@media only screen and (max-width: 30rem) {
  #protocols h1 {
    font-size: 30vw;
    white-space: normal;
    line-height: 24vw;
    padding: 23vw 0 2vw 0;
  }
}

.subtitle-container {
  display: flex;
  justify-content: space-around;
  margin: 4rem 0 6rem;
  position: relative;
  z-index: 1;
}

.subtitle-container h2 {
  background-color: var(--color-background);
  padding: 0.75rem;
  max-width: 32rem;
  border-radius: 0.5rem;
}

.protocol-gif {
  width: 30rem;
  position: absolute;
  top: 0;
  right: 50%;
}

@media only screen and (max-width: 80rem) {
  .protocol-gif {
    width: 38vw;
  }
}

@media only screen and (max-width: 40rem) {
  .protocol-gif {
    width: 67vw;
    top: 38vw;
    left: -1vw;
  }

  .subtitle-container {
    margin: 2rem 0 3rem;
  }
}

.protocols {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  gap: 1rem;
  max-width: 80rem;
  margin: 0 auto;
}

.protocol {
  position: relative;
  background-color: var(--color-background);
  text-align: left;
  padding: 2rem;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 22.5rem;
  border-radius: 1rem;
}

.protocol h3 {
  color: var(--color-foreground);
  display: flex;
  align-items: flex-start;
  white-space: nowrap;
  font-size: 3.5rem;
  font-weight: 700;
  letter-spacing: -1.125px;
  line-height: 3.125rem;
  padding: 0 3rem 1rem 0;
}

.protocol > div > span {
  font-family: var(--font-stack);
  font-size: 1rem;
  color: var(--color-foreground-level-6);
  text-transform: lowercase;
  font-weight: 600;
}

.protocol svg {
  position: absolute;
  top: 2rem;
  right: 2rem;
}

@media only screen and (max-width: 64rem) {
  .protocols {
    grid-template-columns: repeat(1, 1fr);
  }
}

/* CODELANDS SECTION */

#codelands {
  margin-top: 16rem;
  position: relative;
  background: var(--color-foreground-level-1);
}

#codelands .codelands-gif {
  position: absolute;
  left: 0;
  top: 1rem;
  width: 40vw;
  z-index: 0;
}

#codelands h1 {
  text-transform: uppercase;
  font-size: 35vw;
  color: #009900;
  mix-blend-mode: difference;
  line-height: 0.77;
  position: relative;
  z-index: 1;
}

@media only screen and (min-width: 67.5rem) {
  #codelands h1 {
    font-size: 25rem;
  }
}

#codelands a span {
  color: var(--color-foreground-level-5);
}
#codelands a span:hover {
  color: var(--color-secondary);
}

.two-column {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  margin: -4rem auto 0;
  max-width: 90rem;
}

@media only screen and (max-width: 67.5rem) {
  .two-column {
    grid-template-columns: 1fr;
    max-width: 70vw;
    margin-top: 1rem;
  }
}

.two-column-item {
  padding: 10vw 2vw 8vw;
  background-color: var(--color-background);
  position: relative;
  border-radius: 1rem;
}

.two-column-item h3 {
  font-size: 3.5rem;
  font-weight: 700;
  letter-spacing: -1.125px;
  line-height: 3.125rem;
  padding-bottom: 2.5rem;
}

.two-column-item span {
  color: var(--color-foregroud-level-5);
}
@media only screen and (max-width: 64rem) {
  .two-column-item {
    padding: 2rem;
  }
  .two-column-item h3 {
    font-size: 2rem;
    padding-bottom: 1rem;
  }
}

/* TIMELINE SECTION */

#timeline {
  position: relative;
  margin-top: 16rem;
  background: var(--color-foreground-level-1);
}

#timeline h1 {
  text-transform: uppercase;
  font-size: 18vw;
  line-height: 1;
  background: linear-gradient(
    90deg,
    #cc7a00 0%,
    #850f00 16.13%,
    #aa00e6 33.26%,
    #0011ff 50.21%,
    #00ba69 76.04%
  );
  color: #000;
  mix-blend-mode: difference;
  background-clip: text;
  text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  position: relative;
  z-index: 1;
}

@media only screen and (max-width: 30rem) {
  #timeline h1 {
    font-size: 32vw;
    line-height: 26vw;
    padding-top: 16vw;
  }
}

.italic {
  font-style: italic;
}

#timeline .subtitle-container {
  position: relative;
  max-width: 41rem;
  text-align: left;
  margin: 0 0 3.5rem 11rem;
}
/* ... */

